--- a/FUST.ECommerce/appsettings.json
+++ b/FUST.ECommerce/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FUST.ECommerce-ac134bc8-060d-48c5-a727-c5f64de3fd6f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=127.0.0.1;Database=ecommerce;Uid=root;Pwd=Vmware1!;"
   },
   "Logging": {
     "LogLevel": {
